--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="TestUtils is utility which can be used to manipulate your text in the way you want." />
+  <meta name="description"
+    content="TextUtils is a word counter and a character counting utility which can be used to manipulate your text in the way you want.
+     You can remove extra spaces, Speak the manipulated text as well as convert your text from Uppercase to lowercase and lowercase to Uppercase" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +27,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <title>TestUtils - Home</title>
+  <title>TestUtils - Word counter | character counter | lowercase to uppercase | uppercase to lowercase </title>
 </head>
 
 <body>
